fix: Fit table to screen width and allow for horizontal scrolling

--- a/static/css/tables.css
+++ b/static/css/tables.css
@@ -764,3 +764,9 @@
 form#filter-form fieldset {
   border: 1px solid #d9d9d9;
 }
+
+div.table-wrapper {
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
+}
